add status modals

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 // Colors
 $color-primary: #0f98d6;
-$color-secondary: #f59a1b;
+$color-secondary: #c4914b;
 
 $color-white: #fff;
 
@@ -18,7 +18,7 @@ $color-black-25: #fafafa;
 
 $color-green: #17b51c;
 $color-yellow: #fcca26;
-$color-red: #ff4848;
+$color-red: #832f2f;
 
 // Spacing
 $spacing: 1rem; // 16px
