--- a/src/components/Scene/components/Food/styles.module.scss
+++ b/src/components/Scene/components/Food/styles.module.scss
@@ -6,7 +6,8 @@
   height: auto;
   position: absolute;
 
-  background-color: $color-white;
-
   aspect-ratio: 1 / 1;
+
+  border-radius: 7px;
+  background-color: $color-secondary;
 }
