--- a/src/components/Scene/styles.module.scss
+++ b/src/components/Scene/styles.module.scss
@@ -9,4 +9,7 @@
 
   font-size: 24px;
   color: $color-white;
+
+  background-image: url("../../assets/images/dirt.jpg");
+  background-size: 240px;
 }
